--- a/source/DirectX.vcxproj
+++ b/source/DirectX.vcxproj
@@ -79,6 +79,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ColorRGB.h" />
+    <ClInclude Include="HelperFuncts.h" />
     <ClInclude Include="MathHelpers.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="pch.h" />
